[package]
name = "lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde = "1.0"
serde_yaml = "0.8"
tui = { version = "0.17", features = ["termion"] }
crossterm = "0.23"
rexpect = "0.4"
serialport = "4.2.0"
log = "0.4.17"
stderrlog = "0.5.3"

[[bin]]
name = "lab"
path = "main.rs"
